feat: correct Mermaid chart syntax errors and improve error recovery (#4636)
Fixed syntax issues in Mermaid diagrams that caused rendering failures
Improved error handling to allow users to quickly resend and regenerate faulty Mermaid code
Ensured only the problematic diagram is regenerated, preserving the rest of the answer

--- a/webview-ui/src/i18n/locales/ca/common.json
+++ b/webview-ui/src/i18n/locales/ca/common.json
@@ -25,7 +25,8 @@
 			"save": "Desar imatge",
 			"viewCode": "Veure codi",
 			"viewDiagram": "Veure diagrama",
-			"close": "Tancar"
+			"close": "Tancar",
+			"retry": "Tornar a intentar"
 		},
 		"modal": {
 			"codeTitle": "Codi Mermaid"
