--- a/webview-ui/src/i18n/locales/fr/common.json
+++ b/webview-ui/src/i18n/locales/fr/common.json
@@ -25,7 +25,8 @@
 			"save": "Enregistrer l'image",
 			"viewCode": "Voir le code",
 			"viewDiagram": "Voir le diagramme",
-			"close": "Fermer"
+			"close": "Fermer",
+			"retry": "Réessayer"
 		},
 		"modal": {
 			"codeTitle": "Code Mermaid"
