--- a/webview-ui/src/i18n/locales/hi/common.json
+++ b/webview-ui/src/i18n/locales/hi/common.json
@@ -25,7 +25,8 @@
 			"save": "छवि सहेजें",
 			"viewCode": "कोड देखें",
 			"viewDiagram": "डायग्राम देखें",
-			"close": "बंद करें"
+			"close": "बंद करें",
+			"retry": "पुनः प्रयास करें"
 		},
 		"modal": {
 			"codeTitle": "मरमेड कोड"
