--- a/webview-ui/src/i18n/locales/ru/common.json
+++ b/webview-ui/src/i18n/locales/ru/common.json
@@ -25,7 +25,8 @@
 			"save": "Сохранить изображение",
 			"viewCode": "Посмотреть код",
 			"viewDiagram": "Посмотреть диаграмму",
-			"close": "Закрыть"
+			"close": "Закрыть",
+			"retry": "Повторить"
 		},
 		"modal": {
 			"codeTitle": "Код Mermaid"
