fix : locale issue fix

--- a/webview-ui/src/i18n/locales/id/common.json
+++ b/webview-ui/src/i18n/locales/id/common.json
@@ -25,7 +25,8 @@
 			"save": "Simpan Gambar",
 			"viewCode": "Lihat Kode",
 			"viewDiagram": "Lihat Diagram",
-			"close": "Tutup"
+			"close": "Tutup",
+			"retry":"Coba Lagi"
 		},
 		"modal": {
 			"codeTitle": "Kode Mermaid"
