--- a/webview-ui/src/i18n/locales/ja/settings.json
+++ b/webview-ui/src/i18n/locales/ja/settings.json
@@ -173,7 +173,7 @@
 		"getAnthropicApiKey": "Anthropic APIキーを取得",
 		"anthropicUseAuthToken": "Anthropic APIキーをX-Api-Keyの代わりにAuthorizationヘッダーとして渡す",
 		"claudeCodePath": "Claude Code CLIパス",
-		"claudeCodePathDescription": "Claude Code CLIの実行可能ファイルへのパス。デフォルト：claude",
+		"claudeCodePathDescription": "Claude Code CLI実行可能ファイルへのパス。デフォルト：claude",
 		"claudeCodePath": "Claude Code CLIパス",
 		"claudeCodePathDescription": "Claude Code CLI実行可能ファイルへのパス。デフォルト：claude",
 		"chutesApiKey": "Chutes APIキー",
