--- a/src/i18n/locales/it/common.json
+++ b/src/i18n/locales/it/common.json
@@ -62,7 +62,13 @@
 		"share_no_active_task": "Nessuna attività attiva da condividere",
 		"share_auth_required": "Autenticazione richiesta. Accedi per condividere le attività.",
 		"share_not_enabled": "La condivisione delle attività non è abilitata per questa organizzazione.",
-		"share_task_not_found": "Attività non trovata o accesso negato."
+		"share_task_not_found": "Attività non trovata o accesso negato.",
+		"claudeCode": {
+			"processExited": "Il processo Claude Code è terminato con codice {{exitCode}}.",
+			"errorOutput": "Output di errore: {{output}}",
+			"stoppedWithReason": "Claude Code si è fermato per il motivo: {{reason}}",
+			"apiKeyModelPlanMismatch": "Le chiavi API e i piani di abbonamento consentono modelli diversi. Assicurati che il modello selezionato sia incluso nel tuo piano."
+		}
 	},
 	"warnings": {
 		"no_terminal_content": "Nessun contenuto del terminale selezionato",
