--- a/src/i18n/locales/fr/common.json
+++ b/src/i18n/locales/fr/common.json
@@ -62,7 +62,13 @@
 		"share_no_active_task": "Aucune tâche active à partager",
 		"share_auth_required": "Authentification requise. Veuillez vous connecter pour partager des tâches.",
 		"share_not_enabled": "Le partage de tâches n'est pas activé pour cette organisation.",
-		"share_task_not_found": "Tâche non trouvée ou accès refusé."
+		"share_task_not_found": "Tâche non trouvée ou accès refusé.",
+		"claudeCode": {
+			"processExited": "Le processus Claude Code s'est terminé avec le code {{exitCode}}.",
+			"errorOutput": "Sortie d'erreur : {{output}}",
+			"stoppedWithReason": "Claude Code s'est arrêté pour la raison : {{reason}}",
+			"apiKeyModelPlanMismatch": "Les clés API et les plans d'abonnement permettent différents modèles. Assurez-vous que le modèle sélectionné est inclus dans votre plan."
+		}
 	},
 	"warnings": {
 		"no_terminal_content": "Aucun contenu de terminal sélectionné",
