--- a/src/i18n/locales/hi/common.json
+++ b/src/i18n/locales/hi/common.json
@@ -62,7 +62,13 @@
 		"share_no_active_task": "साझा करने के लिए कोई सक्रिय कार्य नहीं",
 		"share_auth_required": "प्रमाणीकरण आवश्यक है। कार्य साझा करने के लिए कृपया साइन इन करें।",
 		"share_not_enabled": "इस संगठन के लिए कार्य साझाकरण सक्षम नहीं है।",
-		"share_task_not_found": "कार्य नहीं मिला या पहुंच अस्वीकृत।"
+		"share_task_not_found": "कार्य नहीं मिला या पहुंच अस्वीकृत।",
+		"claudeCode": {
+			"processExited": "Claude Code प्रक्रिया कोड {{exitCode}} के साथ समाप्त हुई।",
+			"errorOutput": "त्रुटि आउटपुट: {{output}}",
+			"stoppedWithReason": "Claude Code इस कारण से रुका: {{reason}}",
+			"apiKeyModelPlanMismatch": "API कुंजी और सब्सक्रिप्शन प्लान अलग-अलग मॉडल की अनुमति देते हैं। सुनिश्चित करें कि चयनित मॉडल आपकी योजना में शामिल है।"
+		}
 	},
 	"warnings": {
 		"no_terminal_content": "कोई टर्मिनल सामग्री चयनित नहीं",
