--- a/src/i18n/locales/pl/common.json
+++ b/src/i18n/locales/pl/common.json
@@ -62,7 +62,13 @@
 		"share_no_active_task": "Brak aktywnego zadania do udostępnienia",
 		"share_auth_required": "Wymagana autoryzacja. Zaloguj się, aby udostępniać zadania.",
 		"share_not_enabled": "Udostępnianie zadań nie jest włączone dla tej organizacji.",
-		"share_task_not_found": "Zadanie nie znalezione lub dostęp odmówiony."
+		"share_task_not_found": "Zadanie nie znalezione lub dostęp odmówiony.",
+		"claudeCode": {
+			"processExited": "Proces Claude Code zakończył się kodem {{exitCode}}.",
+			"errorOutput": "Wyjście błędu: {{output}}",
+			"stoppedWithReason": "Claude Code zatrzymał się z powodu: {{reason}}",
+			"apiKeyModelPlanMismatch": "Klucze API i plany subskrypcji pozwalają na różne modele. Upewnij się, że wybrany model jest zawarty w twoim planie."
+		}
 	},
 	"warnings": {
 		"no_terminal_content": "Nie wybrano zawartości terminala",
