--- a/src/i18n/locales/zh-TW/common.json
+++ b/src/i18n/locales/zh-TW/common.json
@@ -62,7 +62,13 @@
 		"share_no_active_task": "沒有活躍的工作可分享",
 		"share_auth_required": "需要身份驗證。請登入以分享工作。",
 		"share_not_enabled": "此組織未啟用工作分享功能。",
-		"share_task_not_found": "未找到工作或存取被拒絕。"
+		"share_task_not_found": "未找到工作或存取被拒絕。",
+		"claudeCode": {
+			"processExited": "Claude Code 程序退出，退出碼：{{exitCode}}。",
+			"errorOutput": "錯誤輸出：{{output}}",
+			"stoppedWithReason": "Claude Code 停止，原因：{{reason}}",
+			"apiKeyModelPlanMismatch": "API 金鑰和訂閱方案允許不同的模型。請確保所選模型包含在您的方案中。"
+		}
 	},
 	"warnings": {
 		"no_terminal_content": "沒有選擇終端機內容",
