Fixes saving of description when creating and editing modes

--- a/webview-ui/src/i18n/locales/en/prompts.json
+++ b/webview-ui/src/i18n/locales/en/prompts.json
@@ -37,7 +37,7 @@
 	"description": {
 		"title": "Short description (for humans)",
 		"resetToDefault": "Reset to default description",
-		"description": "A brief description of this mode that appears in the mode selector dropdown."
+		"description": "A brief description shown in the mode selector dropdown."
 	},
 	"whenToUse": {
 		"title": "When to Use (optional)",
@@ -142,9 +142,13 @@
 			"label": "Role Definition",
 			"description": "Define Roo's expertise and personality for this mode."
 		},
+		"description": {
+			"label": "Short description (for humans)",
+			"description": "A brief description shown in the mode selector dropdown."
+		},
 		"whenToUse": {
 			"label": "When to Use (optional)",
-			"description": "Provide a clear description of when this mode is most effective and what types of tasks it excels at."
+			"description": "Guidance for Roo for when this mode should be used. This helps the Orchestrator choose the right mode for a task."
 		},
 		"tools": {
 			"label": "Available Tools",
