feat(i18n): Add missing Gemini related translations for Indonesian (id) locale

--- a/webview-ui/src/i18n/locales/id/settings.json
+++ b/webview-ui/src/i18n/locales/id/settings.json
@@ -45,6 +45,7 @@
 		"openaiProvider": "OpenAI",
 		"ollamaProvider": "Ollama",
 		"openaiCompatibleProvider": "OpenAI Compatible",
+		"geminiProvider": "Gemini",
 		"openaiKeyLabel": "OpenAI Key:",
 		"openaiCompatibleBaseUrlLabel": "Base URL:",
 		"openaiCompatibleApiKeyLabel": "API Key:",
@@ -54,6 +55,20 @@
 		"modelLabel": "Model",
 		"selectModelPlaceholder": "Pilih model",
 		"ollamaUrlLabel": "Ollama URL:",
+		"geminiApiKey": "Kunci API Gemini:",
+		"apiKeyPlaceholder": "Masukkan Kunci API...",
+		"embeddingTaskType": "Tipe Tugas Embedding",
+		"selectTaskTypePlaceholder": "Pilih Tipe Tugas",
+		"selectTaskType": {
+			"codeRetrievalQuery": "Kueri Pengambilan Kode",
+			"retrievalDocument": "Dokumen Pengambilan",
+			"retrievalQuery": "Kueri Pengambilan",
+			"semanticSimilarity": "Kemiripan Semantik",
+			"classification": "Klasifikasi",
+			"clustering": "Pengelompokan"
+		},
+		"embeddingDimension": "Dimensi Embedding",
+		"selectDimensionPlaceholder": "Pilih Dimensi",
 		"qdrantUrlLabel": "Qdrant URL",
 		"qdrantKeyLabel": "Qdrant Key:",
 		"startIndexingButton": "Mulai Pengindeksan",
