--- a/webview-ui/src/i18n/locales/en/account.json
+++ b/webview-ui/src/i18n/locales/en/account.json
@@ -4,5 +4,12 @@
 	"unknownUser": "Unknown User",
 	"logOut": "Log out",
 	"testApiAuthentication": "Test API Authentication",
-	"signIn": "Connect to Roo Code Cloud"
+	"signIn": "Connect to Roo Code Cloud",
+	"connect": "Connect",
+	"cloudBenefitsTitle": "Connect to Roo Code Cloud",
+	"cloudBenefitsSubtitle": "Sync your prompts and telemetry to enable:",
+	"cloudBenefitHistory": "Online task history",
+	"cloudBenefitSharing": "Sharing and collaboration features",
+	"cloudBenefitMetrics": "Task, token, and cost-based usage metrics",
+	"visitCloudWebsite": "Visit Roo Code Cloud"
 }
