--- a/webview-ui/src/i18n/locales/ca/account.json
+++ b/webview-ui/src/i18n/locales/ca/account.json
@@ -4,5 +4,12 @@
 	"unknownUser": "Usuari desconegut",
 	"logOut": "Tancar sessió",
 	"testApiAuthentication": "Provar autenticació d'API",
-	"signIn": "Connecta't a Roo Code Cloud"
+	"signIn": "Connecta't a Roo Code Cloud",
+	"connect": "Connecta",
+	"cloudBenefitsTitle": "Connecta't a Roo Code Cloud",
+	"cloudBenefitsSubtitle": "Sincronitza els teus prompts i telemetria per habilitar:",
+	"cloudBenefitHistory": "Historial de tasques en línia",
+	"cloudBenefitSharing": "Funcions de compartició i col·laboració",
+	"cloudBenefitMetrics": "Mètriques d'ús basades en tasques, tokens i costos",
+	"visitCloudWebsite": "Visita Roo Code Cloud"
 }
