--- a/webview-ui/src/i18n/locales/es/chat.json
+++ b/webview-ui/src/i18n/locales/es/chat.json
@@ -16,7 +16,10 @@
 		"shareWithOrganization": "Compartir con organización",
 		"shareWithOrganizationDescription": "Solo los miembros de tu organización pueden acceder",
 		"sharePublicly": "Compartir públicamente",
-		"sharePubliclyDescription": "Cualquiera con el enlace puede acceder"
+		"sharePubliclyDescription": "Cualquiera con el enlace puede acceder",
+		"connectToCloud": "Conectar al Cloud",
+		"connectToCloudDescription": "Inicia sesión en Roo Code Cloud para compartir tareas",
+		"sharingDisabledByOrganization": "Compartir deshabilitado por la organización"
 	},
 	"unpin": "Desfijar",
 	"pin": "Fijar",
