--- a/webview-ui/src/i18n/locales/ja/account.json
+++ b/webview-ui/src/i18n/locales/ja/account.json
@@ -4,5 +4,12 @@
 	"unknownUser": "不明なユーザー",
 	"logOut": "ログアウト",
 	"testApiAuthentication": "API認証をテスト",
-	"signIn": "Roo Code Cloud に接続"
+	"signIn": "Roo Code Cloud に接続",
+	"connect": "接続",
+	"cloudBenefitsTitle": "Roo Code Cloudに接続",
+	"cloudBenefitsSubtitle": "プロンプトとテレメトリを同期して以下を有効にする：",
+	"cloudBenefitHistory": "オンラインタスク履歴",
+	"cloudBenefitSharing": "共有とコラボレーション機能",
+	"cloudBenefitMetrics": "タスク、Token、コストベースの使用メトリクス",
+	"visitCloudWebsite": "Roo Code Cloudを訪問"
 }
