--- a/webview-ui/src/i18n/locales/ja/chat.json
+++ b/webview-ui/src/i18n/locales/ja/chat.json
@@ -16,7 +16,10 @@
 		"shareWithOrganization": "組織と共有",
 		"shareWithOrganizationDescription": "組織のメンバーのみがアクセスできます",
 		"sharePublicly": "公開で共有",
-		"sharePubliclyDescription": "リンクを持つ誰でもアクセスできます"
+		"sharePubliclyDescription": "リンクを持つ誰でもアクセスできます",
+		"connectToCloud": "クラウドに接続",
+		"connectToCloudDescription": "タスクを共有するためにRoo Code Cloudにサインイン",
+		"sharingDisabledByOrganization": "組織により共有が無効化されています"
 	},
 	"unpin": "ピン留めを解除",
 	"pin": "ピン留め",
