--- a/webview-ui/src/i18n/locales/nl/chat.json
+++ b/webview-ui/src/i18n/locales/nl/chat.json
@@ -16,7 +16,10 @@
 		"shareWithOrganization": "Delen met organisatie",
 		"shareWithOrganizationDescription": "Alleen leden van je organisatie kunnen toegang krijgen",
 		"sharePublicly": "Openbaar delen",
-		"sharePubliclyDescription": "Iedereen met de link kan toegang krijgen"
+		"sharePubliclyDescription": "Iedereen met de link kan toegang krijgen",
+		"connectToCloud": "Verbind met Cloud",
+		"connectToCloudDescription": "Meld je aan bij Roo Code Cloud om taken te delen",
+		"sharingDisabledByOrganization": "Delen uitgeschakeld door organisatie"
 	},
 	"unpin": "Losmaken",
 	"pin": "Vastmaken",
