--- a/webview-ui/src/i18n/locales/pl/account.json
+++ b/webview-ui/src/i18n/locales/pl/account.json
@@ -4,5 +4,12 @@
 	"unknownUser": "Nieznany użytkownik",
 	"logOut": "Wyloguj",
 	"testApiAuthentication": "Testuj uwierzytelnianie API",
-	"signIn": "Połącz z Roo Code Cloud"
+	"signIn": "Połącz z Roo Code Cloud",
+	"connect": "Połącz",
+	"cloudBenefitsTitle": "Połącz z Roo Code Cloud",
+	"cloudBenefitsSubtitle": "Synchronizuj swoje prompty i telemetrię, aby włączyć:",
+	"cloudBenefitHistory": "Historia zadań online",
+	"cloudBenefitSharing": "Funkcje udostępniania i współpracy",
+	"cloudBenefitMetrics": "Metryki użycia oparte na zadaniach, tokenach i kosztach",
+	"visitCloudWebsite": "Odwiedź Roo Code Cloud"
 }
