--- a/webview-ui/src/i18n/locales/ru/account.json
+++ b/webview-ui/src/i18n/locales/ru/account.json
@@ -4,5 +4,12 @@
 	"unknownUser": "Неизвестный пользователь",
 	"logOut": "Выход",
 	"testApiAuthentication": "Проверить аутентификацию API",
-	"signIn": "Подключиться к Roo Code Cloud"
+	"signIn": "Подключиться к Roo Code Cloud",
+	"connect": "Подключиться",
+	"cloudBenefitsTitle": "Подключиться к Roo Code Cloud",
+	"cloudBenefitsSubtitle": "Синхронизируй свои промпты и телеметрию, чтобы включить:",
+	"cloudBenefitHistory": "Онлайн-история задач",
+	"cloudBenefitSharing": "Функции обмена и совместной работы",
+	"cloudBenefitMetrics": "Метрики использования на основе задач, токенов и затрат",
+	"visitCloudWebsite": "Посетить Roo Code Cloud"
 }
