--- a/webview-ui/src/i18n/locales/ru/chat.json
+++ b/webview-ui/src/i18n/locales/ru/chat.json
@@ -16,7 +16,10 @@
 		"shareWithOrganization": "Поделиться с организацией",
 		"shareWithOrganizationDescription": "Только члены вашей организации могут получить доступ",
 		"sharePublicly": "Поделиться публично",
-		"sharePubliclyDescription": "Любой, у кого есть ссылка, может получить доступ"
+		"sharePubliclyDescription": "Любой, у кого есть ссылка, может получить доступ",
+		"connectToCloud": "Подключиться к облаку",
+		"connectToCloudDescription": "Войди в Roo Code Cloud, чтобы делиться задачами",
+		"sharingDisabledByOrganization": "Обмен отключен организацией"
 	},
 	"unpin": "Открепить",
 	"pin": "Закрепить",
