--- a/webview-ui/src/i18n/locales/ca/chat.json
+++ b/webview-ui/src/i18n/locales/ca/chat.json
@@ -19,7 +19,9 @@
 		"sharePubliclyDescription": "Qualsevol amb l'enllaç pot accedir",
 		"connectToCloud": "Connecta al núvol",
 		"connectToCloudDescription": "Inicia sessió a Roo Code Cloud per compartir tasques",
-		"sharingDisabledByOrganization": "Compartició deshabilitada per l'organització"
+		"sharingDisabledByOrganization": "Compartició deshabilitada per l'organització",
+		"shareSuccessOrganization": "Enllaç d'organització copiat al porta-retalls",
+		"shareSuccessPublic": "Enllaç públic copiat al porta-retalls"
 	},
 	"unpin": "Desfixar",
 	"pin": "Fixar",
