--- a/webview-ui/src/i18n/locales/fr/chat.json
+++ b/webview-ui/src/i18n/locales/fr/chat.json
@@ -19,7 +19,9 @@
 		"sharePubliclyDescription": "Toute personne avec le lien peut accéder",
 		"connectToCloud": "Se connecter au Cloud",
 		"connectToCloudDescription": "Connecte-toi à Roo Code Cloud pour partager des tâches",
-		"sharingDisabledByOrganization": "Partage désactivé par l'organisation"
+		"sharingDisabledByOrganization": "Partage désactivé par l'organisation",
+		"shareSuccessOrganization": "Lien d'organisation copié dans le presse-papiers",
+		"shareSuccessPublic": "Lien public copié dans le presse-papiers"
 	},
 	"unpin": "Désépingler",
 	"pin": "Épingler",
