--- a/webview-ui/src/i18n/locales/hi/chat.json
+++ b/webview-ui/src/i18n/locales/hi/chat.json
@@ -19,7 +19,9 @@
 		"sharePubliclyDescription": "लिंक वाला कोई भी व्यक्ति पहुंच सकता है",
 		"connectToCloud": "Cloud से कनेक्ट करें",
 		"connectToCloudDescription": "कार्य साझा करने के लिए Roo Code Cloud में साइन इन करें",
-		"sharingDisabledByOrganization": "संगठन द्वारा साझाकरण अक्षम किया गया"
+		"sharingDisabledByOrganization": "संगठन द्वारा साझाकरण अक्षम किया गया",
+		"shareSuccessOrganization": "संगठन लिंक क्लिपबोर्ड में कॉपी किया गया",
+		"shareSuccessPublic": "सार्वजनिक लिंक क्लिपबोर्ड में कॉपी किया गया"
 	},
 	"unpin": "पिन करें",
 	"pin": "अवपिन करें",
