--- a/webview-ui/src/i18n/locales/id/chat.json
+++ b/webview-ui/src/i18n/locales/id/chat.json
@@ -19,7 +19,9 @@
 		"sharePubliclyDescription": "Siapa pun dengan tautan dapat mengakses",
 		"connectToCloud": "Hubungkan ke Cloud",
 		"connectToCloudDescription": "Masuk ke Roo Code Cloud untuk berbagi tugas",
-		"sharingDisabledByOrganization": "Berbagi dinonaktifkan oleh organisasi"
+		"sharingDisabledByOrganization": "Berbagi dinonaktifkan oleh organisasi",
+		"shareSuccessOrganization": "Tautan organisasi disalin ke clipboard",
+		"shareSuccessPublic": "Tautan publik disalin ke clipboard"
 	},
 	"history": {
 		"title": "Riwayat"
