--- a/webview-ui/src/i18n/locales/ko/chat.json
+++ b/webview-ui/src/i18n/locales/ko/chat.json
@@ -19,7 +19,9 @@
 		"sharePubliclyDescription": "링크가 있는 누구나 액세스할 수 있습니다",
 		"connectToCloud": "클라우드에 연결",
 		"connectToCloudDescription": "작업을 공유하려면 Roo Code Cloud에 로그인하세요",
-		"sharingDisabledByOrganization": "조직에서 공유가 비활성화됨"
+		"sharingDisabledByOrganization": "조직에서 공유가 비활성화됨",
+		"shareSuccessOrganization": "조직 링크가 클립보드에 복사되었습니다",
+		"shareSuccessPublic": "공개 링크가 클립보드에 복사되었습니다"
 	},
 	"unpin": "고정 해제하기",
 	"pin": "고정하기",
