--- a/webview-ui/src/i18n/locales/nl/chat.json
+++ b/webview-ui/src/i18n/locales/nl/chat.json
@@ -19,7 +19,9 @@
 		"sharePubliclyDescription": "Iedereen met de link kan toegang krijgen",
 		"connectToCloud": "Verbind met Cloud",
 		"connectToCloudDescription": "Meld je aan bij Roo Code Cloud om taken te delen",
-		"sharingDisabledByOrganization": "Delen uitgeschakeld door organisatie"
+		"sharingDisabledByOrganization": "Delen uitgeschakeld door organisatie",
+		"shareSuccessOrganization": "Organisatielink gekopieerd naar klembord",
+		"shareSuccessPublic": "Openbare link gekopieerd naar klembord"
 	},
 	"unpin": "Losmaken",
 	"pin": "Vastmaken",
