--- a/webview-ui/src/i18n/locales/ru/chat.json
+++ b/webview-ui/src/i18n/locales/ru/chat.json
@@ -19,7 +19,9 @@
 		"sharePubliclyDescription": "Любой, у кого есть ссылка, может получить доступ",
 		"connectToCloud": "Подключиться к облаку",
 		"connectToCloudDescription": "Войди в Roo Code Cloud, чтобы делиться задачами",
-		"sharingDisabledByOrganization": "Обмен отключен организацией"
+		"sharingDisabledByOrganization": "Обмен отключен организацией",
+		"shareSuccessOrganization": "Ссылка организации скопирована в буфер обмена",
+		"shareSuccessPublic": "Публичная ссылка скопирована в буфер обмена"
 	},
 	"unpin": "Открепить",
 	"pin": "Закрепить",
