--- a/webview-ui/src/i18n/locales/es/chat.json
+++ b/webview-ui/src/i18n/locales/es/chat.json
@@ -310,5 +310,8 @@
 		"indexed": "Indexado",
 		"error": "Error de índice",
 		"status": "Estado del índice"
+	},
+	"versionIndicator": {
+		"ariaLabel": "Version {{version}} - Click to view release notes"
 	}
 }
