--- a/webview-ui/src/i18n/locales/id/chat.json
+++ b/webview-ui/src/i18n/locales/id/chat.json
@@ -316,5 +316,8 @@
 		"indexed": "Terindeks",
 		"error": "Error indeks",
 		"status": "Status indeks"
+	},
+	"versionIndicator": {
+		"ariaLabel": "Version {{version}} - Click to view release notes"
 	}
 }
