fix: resolve PR issues
- Consolidate duplicate Announcement modal rendering logic
- Remove unrelated formatting changes (semicolon and trailing comma)
- Add translations for all non-English locales
- Extract version indicator into reusable VersionIndicator component
- Update tests to work with new component structure

--- a/webview-ui/src/i18n/locales/ca/chat.json
+++ b/webview-ui/src/i18n/locales/ca/chat.json
@@ -312,6 +312,6 @@
 		"status": "Estat de l'índex"
 	},
 	"versionIndicator": {
-		"ariaLabel": "Version {{version}} - Click to view release notes"
+		"ariaLabel": "Versió {{version}} - Feu clic per veure les notes de llançament"
 	}
 }
