--- a/webview-ui/src/i18n/locales/ja/chat.json
+++ b/webview-ui/src/i18n/locales/ja/chat.json
@@ -312,6 +312,6 @@
 		"status": "インデックス状態"
 	},
 	"versionIndicator": {
-		"ariaLabel": "Version {{version}} - Click to view release notes"
+		"ariaLabel": "バージョン {{version}} - クリックしてリリースノートを表示"
 	}
 }
