--- a/webview-ui/src/i18n/locales/pt-BR/chat.json
+++ b/webview-ui/src/i18n/locales/pt-BR/chat.json
@@ -312,6 +312,6 @@
 		"status": "Status do índice"
 	},
 	"versionIndicator": {
-		"ariaLabel": "Version {{version}} - Click to view release notes"
+		"ariaLabel": "Versão {{version}} - Clique para ver as notas de lançamento"
 	}
 }
